syntax="proto3";

package glimr;

option go_package = "github.com/thesheps/glimr/proto/glimr";

service Glimr {
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
}
  
message RequestVoteRequest {
}
  
message RequestVoteResponse {
}